welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:2: error: not found: value int
int sum = a+b;
^sortaSum:4: error: not found: value sum
  if(sum >= 10 && sum <= 19)
     ^sortaSum:7: error: not found: value sum
    return sum;
           ^